--- a/Weather app v.1/style.css
+++ b/Weather app v.1/style.css
@@ -1,43 +1,42 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', 'sans-serif';
     box-sizing: border-box;
 }
 
-body{
-    background: url('static/weather3.jpg'); /* Add your background image */
+body {
+    background: url('static/weather3.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-.card{
+.card {
     width: 90%;
     max-width: 470px;
-    background: rgba(255, 255, 255, 0.2); /* Use rgba for transparency */
-    backdrop-filter: blur(10px); /* Apply a backdrop filter for the glass effect */
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
-    text-align: center; 
-    transition: background 0.5s ease; /* Add transition for a smooth effect */
-
+    text-align: center;
+    transition: background 0.5s ease;
 }
 
-.search{
+.search {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 20px; 
 }
 
-.search input{
+.search input {
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -50,7 +49,7 @@ body{
     font-size: 18px;
 }
 
-.search button{
+.search button {
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -60,59 +59,85 @@ body{
     cursor: pointer;
 }
 
-.search button img{
+.search button img {
     width: 16px;
 }
 
-.weather-icon{
+.weather-icon {
     width: 170px;
     margin-top: 30px;
+    max-width: 100%; 
 }
 
-.weather h1{
+.weather h1 {
     font-size: 80px;
     font-weight: 500;
+    margin: 20px 0; 
 }
 
-.weather h2{
+.weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
 
-.details{
+.details {
     display: flex;
+    flex-wrap: wrap; 
     align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+    justify-content: space-around;
     margin-top: 50px;
 }
 
-.col{
+.col {
     display: flex;
     align-items: center;
     text-align: left;
-
+    margin-bottom: 20px; 
 }
 
-.col img{
+.col img {
     width: 40px;
     margin-right: 10px;
 }
 
-.humidity, .wind{
+.humidity,
+.wind {
     font-size: 28px;
     margin-top: -6px;
 }
 
-.weather{
+.weather {
     display: none;
 }
 
-.error{
+.error {
     text-align: left;
     margin-left: 10px;
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+
+/* Media queries for responsive design */
+@media only screen and (max-width: 600px) {
+    .card {
+        padding: 30px 25px; 
+    }
+
+    .search input {
+        font-size: 16px; 
+    }
+
+    .weather h1 {
+        font-size: 60px; 
+    }
+
+    .weather h2 {
+        font-size: 35px; 
+    }
+
+    .weather-icon {
+        width: 120px;
+    }
 }
